Hero, sections, footer is done.

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,12 +7,18 @@
     <title>Портфоліо</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header__container">
         <nav class="header__container">
           <a class="logo" href="./index.html">Web<span class="header__logo">Studio</span></a>
@@ -45,13 +51,13 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <main>
       <section class="section">
         <div class="container">
           <h1 class="visually-hidden">Портфоліо</h1>
           <ul class="filter">
-            <li><button class="filter__btn" type="button">Усі</button></li>
+            <li><button class="filter__btn filter__btn--active" type="button">Усі</button></li>
             <li><button class="filter__btn" type="button">Веб-сайти</button></li>
             <li><button class="filter__btn" type="button">Додатки</button></li>
             <li><button class="filter__btn" type="button">Дизайн</button></li>
@@ -61,10 +67,16 @@
             <li class="projects__item">
               <a class="projects__link" href="#">
                 <div class="projects__img">
-                  <img src="./images/technokr.jpg" alt="Веб-сайт на екрані комп'ютера" width="370" />
+                  <img
+                    src="./images/technokr.jpg"
+                    alt="Веб-сайт на екрані комп'ютера"
+                    width="370"
+                  />
                   <div class="projects__overlay">
                     <p class="projects__desc">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
                     </p>
                   </div>
                 </div>
@@ -80,13 +92,17 @@
                   <img src="./images/poster.jpg" alt="Два баскетболісти" width="370" />
                   <div class="projects__overlay">
                     <p class="projects__desc">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
                     </p>
                   </div>
                 </div>
 
                 <div class="projects__wrap">
-                  <h2 class="projects__title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                  <h2 class="projects__title">
+                    Постер <span lang="en">New Orlean vs Golden Star</span>
+                  </h2>
                   <p class="projects__type">Дизайн</p>
                 </div>
               </a>
@@ -97,7 +113,9 @@
                   <img src="./images/seafood.jpg" alt="Логотип ресторану" width="370" />
                   <div class="projects__overlay">
                     <p class="projects__desc">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
                     </p>
                   </div>
                 </div>
@@ -114,7 +132,9 @@
                   <img src="./images/prime.jpg" alt="Навушники" width="370" />
                   <div class="projects__overlay">
                     <p class="projects__desc">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
                     </p>
                   </div>
                 </div>
@@ -131,7 +151,9 @@
                   <img src="./images/boxes.jpg" alt="Двi коробки рiзного розмiру" width="370" />
                   <div class="projects__overlay">
                     <p class="projects__desc">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
                     </p>
                   </div>
                 </div>
@@ -148,7 +170,9 @@
                   <img src="./images/inspiration.jpg" alt="Монiтор комп'ютера" width="370" />
                   <div class="projects__overlay">
                     <p class="projects__desc">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
                     </p>
                   </div>
                 </div>
@@ -165,7 +189,9 @@
                   <img src="./images/edition.jpg" alt="Вiдкритий журнал" width="370" />
                   <div class="projects__overlay">
                     <p class="projects__desc">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
                     </p>
                   </div>
                 </div>
@@ -182,7 +208,9 @@
                   <img src="./images/lab.jpg" alt="Бiрка з написом Lab El Tag" width="370" />
                   <div class="projects__overlay">
                     <p class="projects__desc">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
                     </p>
                   </div>
                 </div>
@@ -199,7 +227,9 @@
                   <img src="./images/business.jpg" alt="Людина працює за комп'ютером" width="370" />
                   <div class="projects__overlay">
                     <p class="projects__desc">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
                     </p>
                   </div>
                 </div>
@@ -214,7 +244,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer__container">
         <div class="contact-wrap">
           <a class="logo" href="./index.html">Web<span class="footer__logo">Studio</span></a>
@@ -278,6 +308,6 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
