--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header class="header">
+   <header class="header">
       <div class="container header__container">
         <nav class="header__container">
           <a class="logo" href="./index.html">Web<span class="header__logo">Studio</span></a>
@@ -386,7 +386,7 @@
             </ul>
           </address>
         </div>
-        <div class="social-media">
+        <div class="socials-wrap">
           <p class="footer__title">Приєднуйтесь</p>
           <ul class="socials">
             <li class="socials__item">
@@ -419,7 +419,7 @@
             </li>
           </ul>
         </div>
-        <div class="subscribe">
+        <div class="subscription-wrap">
           <p class="footer__title">Підпишіться на розсилку</p>
           <form class="subscription" action="javascript:void(0);" method="POST" autocomplete="off">
             <input
@@ -439,7 +439,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop visually-hidden" data-modal>
+    <!-- <div class="backdrop visually-hidden" data-modal>
       <div class="modal">
         <button class="modal__close-btn" data-modal-close>
           <svg width="18" height="18">
@@ -492,7 +492,7 @@
           <button class="order-form__btn" type="submit">Відправити</button>
         </form>
       </div>
-    </div>
-    <script src="./js/modal.js"></script>
+    </div> -->
+    <!-- <script src="./js/modal.js"></script> -->
   </body>
 </html>
