--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-   <header class="header">
+    <header class="header">
       <div class="container header__container">
         <nav class="header__container">
           <a class="logo" href="./index.html">Web<span class="header__logo">Studio</span></a>
@@ -50,6 +50,11 @@
             >
           </li>
         </ul>
+        <button class="nav__btn" type="button">
+          <svg width="40" height="40">
+            <use href="./images/sprite.svg#icon-menu"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <main>
