--- a/index.html
+++ b/index.html
@@ -50,11 +50,59 @@
             >
           </li>
         </ul>
-        <button class="nav__btn" type="button">
+        <button class="burger-btn" type="button" data-menu-open>
           <svg width="40" height="40">
             <use href="./images/sprite.svg#icon-menu"></use>
           </svg>
         </button>
+      </div>
+
+      <!---------- Мобільна навігація----------->
+      <div class="mobile-nav visually-hidden" data-menu>
+        <button class="mobile-nav__btn" data-menu-close>
+          <svg width="40" height="40">
+            <use href="./images/sprite.svg#icon-nav-close"></use>
+          </svg>
+        </button>
+        <div class="mobile-nav__wrap-top">
+          <ul class="mobile-menu">
+            <li class="mobile-menu__item">
+              <a class="mobile-menu__link" href="./index.html">Студія</a>
+            </li>
+            <li class="mobile-menu__item">
+              <a class="mobile-menu__link" href="./index.html">Портфоліо</a>
+            </li>
+            <li class="mobile-menu__item">
+              <a class="mobile-menu__link" href="./index.html">Контакти</a>
+            </li>
+          </ul>
+        </div>
+        <div class="mobile-nav__wrap-bottom">
+          <ul class="mobile-contact">
+            <li class="mobile-contact__item">
+              <a class="mobile-contact__tel" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+            <li class="mobile-contact__item">
+              <a class="mobile-contact__address" href="mailto:info@devstudio.com" target="_blank">
+                info@devstudio.com</a
+              >
+            </li>
+          </ul>
+          <ul class="mobile-socials">
+            <li class="mobile-socials__item">
+              <a class="mobile-socials__link" href="#">Instagram</a>
+            </li>
+            <li class="mobile-socials__item">
+              <a class="mobile-socials__link" href="#">Twitter</a>
+            </li>
+            <li class="mobile-socials__item">
+              <a class="mobile-socials__link" href="#">Facebook</a>
+            </li>
+            <li class="mobile-socials__item">
+              <a class="mobile-socials__link" href="#">LinkedIn</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <main>
@@ -499,5 +547,6 @@
       </div>
     </div> -->
     <!-- <script src="./js/modal.js"></script> -->
+    <script src="./js/menu.js"></script>
   </body>
 </html>
